# log-whisperer

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  USAGE.md  build_package.sh  chat.txt  example_log.txt  pyproject.toml  requirements.txt  setup.py
log_whisperer/: __init__.py  chat.py  cli.py  config.py  llm_factory.py
log_whisperer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
log_whisperer/prompts/: system_prompt.txt
src/: __init__.py
tests/: test_chat_end_to_end.py  test_cli_status_and_config.py
